# raic2020

./: .gitignore  CMakeLists.sub  CMakeLists.txt  MyStrategy.cpp  MyStrategy.h  actions.h  actions_all.h  actions_build.h  actions_gather.h  actions_horse.h  actions_repair.h  actions_train.h  actions_war.h  actions_workers.h  astar.h  common.h  drawer.h  frontiers.h  game_status.h  main.cpp  mytime.h  release.sh  squads.h  submit.sh  visualizer.h  world.h
model/: Entity.cpp  Entity.hpp  EntityType.hpp  PlayerView.cpp  Vec2Int.cpp  Vec2Int.hpp
